[gd_scene load_steps=16 format=3 uid="uid://dth8e2nco5vtl"]

[ext_resource type="Script" path="res://control.gd" id="1_oapt8"]
[ext_resource type="Theme" uid="uid://c1t1wklam0k5a" path="res://font.tres" id="2_65poy"]
[ext_resource type="AudioStream" uid="uid://bcc6bphegwvkv" path="res://ding-126626.mp3" id="3_8ils1"]
[ext_resource type="Script" path="res://richtext.gd" id="3_82w4j"]
[ext_resource type="Material" uid="uid://cnblfenboxqqi" path="res://wig.tres" id="3_nn2bi"]
[ext_resource type="AudioStream" uid="uid://dnvr74314mrkk" path="res://huh_-sound-effect-made-with-Voicemod.mp3" id="4_jjbit"]
[ext_resource type="AudioStream" uid="uid://dnsvwl08nnjsb" path="res://pop.mp3" id="5_2kq0e"]
[ext_resource type="AudioStream" uid="uid://ci07wtwruug6d" path="res://mixkit-modern-technology-select-3124.wav" id="6_3l7ok"]
[ext_resource type="AudioStream" uid="uid://blgbhtls120lk" path="res://Bollywood.mp3" id="8_a45jl"]
[ext_resource type="Texture2D" uid="uid://b581b7druh56y" path="res://back.png" id="10_4fpi0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7m62"]
bg_color = Color(0.588235, 0.423529, 0.423529, 1)

[sub_resource type="RichTextEffect" id="RichTextEffect_mv3uo"]
script = ExtResource("3_82w4j")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqw05"]
draw_center = false
border_width_bottom = 9
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_6s8x8"]
RichTextLabel/styles/normal = SubResource("StyleBoxFlat_kqw05")

[sub_resource type="RichTextEffect" id="RichTextEffect_mo3ob"]
script = ExtResource("3_82w4j")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oapt8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u7m62")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -223.0
offset_right = 176.0
offset_bottom = 223.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_65poy")

[node name="Operation" type="HBoxContainer" parent="Container"]
custom_minimum_size = Vector2(30, 3)
layout_mode = 2

[node name="space" type="Label" parent="Container/Operation"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="oper" type="Label" parent="Container/Operation"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme_override_constants/outline_size = 17
horizontal_alignment = 2
vertical_alignment = 1

[node name="2Values" type="VBoxContainer" parent="Container/Operation"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Label" type="RichTextLabel" parent="Container/Operation/2Values"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 8
bbcode_enabled = true
text = "1256"
fit_content = true
scroll_active = false
autowrap_mode = 0
custom_effects = [SubResource("RichTextEffect_mv3uo")]

[node name="Label2" type="RichTextLabel" parent="Container/Operation/2Values"]
clip_contents = false
layout_mode = 2
theme = SubResource("Theme_6s8x8")
bbcode_enabled = true
text = "12"
fit_content = true
scroll_active = false
autowrap_mode = 0
custom_effects = [SubResource("RichTextEffect_mo3ob")]
text_direction = 2

[node name="Label3" type="Label" parent="Container"]
layout_mode = 2
horizontal_alignment = 2

[node name="shader" type="ColorRect" parent="."]
visible = false
material = ExtResource("3_nn2bi")
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_right = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 33

[node name="pipefall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8ils1")
volume_db = 4.069

[node name="huh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jjbit")

[node name="pop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2kq0e")

[node name="press" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_3l7ok")

[node name="bg_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_a45jl")
volume_db = -15.0
parameters/looping = true

[node name="test" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_right = 487.0
offset_bottom = 267.0
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="skip_count" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="back" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
focus_mode = 0
icon = ExtResource("10_4fpi0")
icon_alignment = 1
expand_icon = true

[node name="Correct" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_65poy")

[connection signal="pressed" from="HBoxContainer/back" to="." method="_on_back_pressed"]
